<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_complaint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="org.butuka.activity.ComplaintActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/addFileBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/add_photo_bg" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addFileBt"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/fileNameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:src="@mipmap/file_ic" />

                    <TextView
                        android:id="@+id/fileNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Arquivo.txt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="100"
                        android:hint="@string/location">

                        <EditText
                            android:id="@+id/locationEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- ImageView
                        android:id="@+id/mapBt"
                        android:layout_marginTop="16dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/map_marker" /-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:hint="@string/date">

                        <EditText
                            android:id="@+id/dateEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:hint="@string/time">

                        <EditText
                            android:id="@+id/timeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="time" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/violation">

                    <EditText
                        android:id="@+id/violatorEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/occurrence">

                    <EditText
                        android:id="@+id/descriptionEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sendBt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/container"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="#d72446">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_check" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
